# xGRN

./: .gitignore  CODEX_TASKS.md  PERFORMANCE_PLAN.md  README.md  TODO.md  app.py  pyproject.toml
diagrams/2026-05-15T190751/: diagram.json
flash_attn/: __init__.py
outputs/track-a/profile/: block_ops.py  cpu_gpu_split.py  fused_vs_split_qkv.py  layer_dropping.py  make_pipeline_svg.py  make_sequence_svg.py  mlp_quant_matmul.py  multistream_qkv.py  refine_phases.py  serial_vs_parallel.py  swiglu_fusion.py
outputs/track-c/: multiprompt_sweep.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: About.tsx  Advanced.tsx  Controls.tsx  Gallery.tsx  Header.tsx  Lightbox.tsx  Preview.tsx  PromptPanel.tsx  ui.tsx
web/src/lib/: api.ts
wins/: 2026-05-15-first-run-cache.md
xgrn_ext/: CMakeLists.txt  README.md  __init__.py
xgrn_ext/cpp/: bindings.cpp  simdgroup_matmul.cpp  simdgroup_matmul.h  simdgroup_matmul_primitive.cpp  simdgroup_matmul_primitive.h  xgrn_ext.metal
xgrn_metal/: __init__.py  bench_pytorch.py  download.py  t2i_mps.py
xgrn_mlx/: __init__.py  bench.py  bootstrap.py  constants.py  convert.py  decode.py  grn.py  hbq_mlx.py  hbq_parity.py  parity.py  rope.py  run.py  schedule.py  simdgroup_matmul.py  text.py  validate.py
